examples/invalid_policies/unknown_policy_rule.argx
module invalid.unknown_rule

policy Bad {
    require future_rule
}
